--- a/Clock/index.html
+++ b/Clock/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Clock</title>
-    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   </head>
   <body>
     <h1 id="clock">00:00:00</h1>
